Check jail.local state and warn user if it is not fail2ban-UI managed, disable automatic jail.local migration because it is only testing

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -19,6 +19,8 @@
     "dashboard.loading_summary": "Zusammenfassung wird geladen…",
     "dashboard.no_enabled_servers_title": "Keine aktiven Verbindungen",
     "dashboard.no_enabled_servers_body": "Aktiviere den lokalen Connector oder registriere einen entfernten Fail2ban-Server, um Live-Daten zu sehen.",
+    "dashboard.jail_local_warning_title": "Das jail.local auf diesem Server wird nicht von Fail2ban-UI verwaltet",
+    "dashboard.jail_local_warning_body": "Die Datei /etc/fail2ban/jail.local auf dem ausgewählten Server existiert, wird aber nicht von Fail2ban-UI verwaltet. Die Callback-Aktion (ui-custom-action) fehlt, weshalb Ban-/Unban-Ereignisse nicht aufgezeichnet und keine E-Mail-Benachrichtigungen gesendet werden. Um dies zu beheben, verschiebe andernfalls selbst erstellte oder vorhandene Jail-Definitionen aus jail.local in eine eigene Datei unter /etc/fail2ban/jail.d/ (verwende jeweils jailname.conf für eine Standard-Konfiguration oder jailname.local um eine bestehende .conf zu überschreiben). Lösche danach jail.local, damit Fail2ban-UI die verwaltete Version erstellen kann (Zum erstellen, einmal in den Einstellungen auf speichern klichen). Stelle zudem sicher, dass Fail2ban-UI Schreibrechte auf /etc/fail2ban/ hat -> siehe Dokumentation.",
     "dashboard.errors.summary_failed": "Zusammenfassung konnte nicht vom Server geladen werden.",
     "dashboard.cards.active_jails": "Aktive Jails",
     "dashboard.cards.total_banned": "Gesamt gesperrte IPs",
@@ -336,6 +338,7 @@
     "servers.actions.test": "Verbindung testen",
     "servers.actions.test_success": "Verbindung erfolgreich",
     "servers.actions.test_failure": "Verbindung fehlgeschlagen",
+    "servers.jail_local_warning": "Warnung: jail.local wird nicht von Fail2ban-UI verwaltet. Verschiebe jeden Jail in eine eigene Datei unter jail.d/ und lösche jail.local, damit Fail2ban-UI sie neu erstellen kann (einmal auf der Einstellungen-Seite speichern, um die Datei zu schreiben). Siehe Dokumentation für Berechtigungen.",
     "servers.actions.restart": "Fail2ban neu starten",
     "servers.actions.reload": "Fail2ban neu laden",
     "servers.actions.reload_tooltip": "Für lokale Connectors ist nur ein Neuladen der Konfiguration über die Socket-Verbindung möglich. Der Container kann den Fail2ban-Dienst nicht mit systemctl neu starten. Für einen vollständigen Neustart führen Sie 'systemctl restart fail2ban' direkt auf dem Host-System aus.",
@@ -344,7 +347,7 @@
     "servers.form.select_key": "Privaten Schlüssel auswählen",
     "servers.form.select_key_placeholder": "Manuelle Eingabe",
     "servers.form.no_keys": "Keine SSH-Schlüssel gefunden; Pfad manuell eingeben",
-    "filter_debug.not_available": "Filter-Debug ist nur für lokale Connectoren verfügbar.",
+    "filter_debug.not_available": "Filter-Debug ist nur verfügbar, wenn mindestens ein registrierter Fail2ban-Server aktiviert ist.",
     "filter_debug.local_missing": "Das lokale Fail2ban-Filterverzeichnis wurde auf diesem Host nicht gefunden.",
     "email.ban.title": "Achtung: Fail2Ban hat eine neue IP-Adresse blockiert",
     "email.ban.intro": "Fail2Ban-UI hat eine fehlerhafte Anfrage oder wiederholte Authentifizierungsfehler erkannt und die Quell-IP automatisch blockiert. Überprüfen Sie die Metadaten und Log-Auszüge unten.",
