--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -19,6 +19,8 @@
     "dashboard.loading_summary": "Laded Zämmefassig…",
     "dashboard.no_enabled_servers_title": "Ke aktivi Verbindige",
     "dashboard.no_enabled_servers_body": "Aktivier dr lokal Connector oder registrier ä entfernte Fail2ban-Server.",
+    "dashboard.jail_local_warning_title": "Das jail.local uf däm Server wird nid vom Fail2ban-UI verwaltet",
+    "dashboard.jail_local_warning_body": "D Datei /etc/fail2ban/jail.local ufem usgwählte Server existiert, wird aber nid vom Fail2ban-UI verwaltet. D Callback-Aktion (ui-custom-action) fähut, drum wärde Ban-/Unban-Ereignis nid ufzeichnet und kei E-Mail-Benachrichtigunge verschickt. Zum behebe: Verschieb jedi Jail-Definition us jail.local i ä eigeni Datei unger /etc/fail2ban/jail.d/ (nimm jailname.conf für ä Standard-Konfig oder jailname.local zumnä bestehendi .conf z überschriibe). Lösch denn jail.local, damit Fail2ban-UI ä eigeni verwalteti Version cha ersteue. Steu o sicher dass z Fail2ban-UI Schriibrächt uf /etc/fail2ban/ het -> siehe Doku.",
     "dashboard.errors.summary_failed": "Zämmefassig het nid chönne glade wärde.",
     "dashboard.cards.active_jails": "Aktivi Jails",
     "dashboard.cards.total_banned": "Total g'sperrti IPs",
@@ -336,6 +338,7 @@
     "servers.actions.test": "Verbindig teste",
     "servers.actions.test_success": "Verbindig erfolgriich",
     "servers.actions.test_failure": "Verbindig nöd möglich",
+    "servers.jail_local_warning": "Achtung: z jail.local wird nid vom Fail2ban-UI verwaltet. Verschieb jede Jail in ä eigeni Datei under jail.d/ und lösch z jail.local, damit Fail2ban-UI z file neu cha erstelle. Lueg d Doku a betreffend Berechtigunge.",
     "servers.actions.restart": "Fail2ban neu starte",
     "servers.actions.reload": "Fail2ban neu lade",
     "servers.actions.reload_tooltip": "Für lokali Connectors isch nur es Neulade vo de Konfiguration über d Socket-Verbindig möglich. Dr Container cha dr Fail2ban-Dienst nid mit systemctl neu starte. Für en vollständige Neustart füehre Sie 'systemctl restart fail2ban' direkt uf em Host-System us.",
@@ -344,7 +347,7 @@
     "servers.form.select_key": "Priväte Schlissel ufwähle",
     "servers.form.select_key_placeholder": "Manuäll igäh",
     "servers.form.no_keys": "Kei SSH-Schlüssel gfunde; Pfad selber igäh",
-    "filter_debug.not_available": "Filter-Debug git's nur für lokal Connectorä.",
+    "filter_debug.not_available": "Filter-Debug funktioniert nur, we mindestens ei registrierte Fail2ban-Server aktiviert isch.",
     "filter_debug.local_missing": "S lokale Fail2ban-Filterverzeichnis isch uf däm Host nid gfunde worde.",
     "email.ban.title": "Achtung: Fail2Ban het e nöi IP-Adrässe blockiert",
     "email.ban.intro": "Fail2Ban-UI het e fehlerhafti Aafrag oder widerholti Authentifizierigsfähler erkennt und d Quell-IP automatisch blockiert. Überprüef d Metadate und Log-Uuszüg unge.",
