--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -20,6 +20,8 @@
     "dashboard.errors.summary_failed": "Failed to load summary from server.",
     "dashboard.no_enabled_servers_title": "No active connectors",
     "dashboard.no_enabled_servers_body": "Enable the local connector or register a remote Fail2ban server to see live data.",
+    "dashboard.jail_local_warning_title": "The jail.local on this server is not managed by Fail2ban-UI",
+    "dashboard.jail_local_warning_body": "The file /etc/fail2ban/jail.local on the selected server exists but is not managed by Fail2ban-UI. The callback action (ui-custom-action) is missing, which means ban/unban events will not be recorded and no email alerts will be sent. To fix this, move each jail section from your jail.local into its own file under /etc/fail2ban/jail.d/ (use jailname.conf to keep a default or jailname.local to override an existing .conf). Then delete jail.local so Fail2ban-UI can create its own managed version (hit once save on the settings page to write the file). Ensure also Fail2ban-UI has write permissions to /etc/fail2ban/ -> see the documentation for details.",
     "dashboard.cards.active_jails": "Active Jails",
     "dashboard.cards.total_banned": "Total Banned IPs",
     "dashboard.cards.new_last_hour": "New Last Hour",
@@ -336,6 +338,7 @@
     "servers.actions.test": "Test connection",
     "servers.actions.test_success": "Connection successful",
     "servers.actions.test_failure": "Connection failed",
+    "servers.jail_local_warning": "Warning: jail.local is not managed by Fail2ban-UI. Move each jail into its own file under jail.d/ and delete jail.local so Fail2ban-UI can recreate it (hit once save on the settings page to write the file). See docs for permissions.",
     "servers.actions.restart": "Restart Fail2ban",
     "servers.actions.reload": "Reload Fail2ban",
     "servers.actions.reload_tooltip": "For local connectors, only a configuration reload is possible via the socket connection. The container cannot restart the Fail2ban service using systemctl. To perform a full restart, run 'systemctl restart fail2ban' directly on the host system.",
@@ -344,7 +347,7 @@
     "servers.form.select_key": "Select Private Key",
     "servers.form.select_key_placeholder": "Manual entry",
     "servers.form.no_keys": "No SSH keys found; enter path manually",
-    "filter_debug.not_available": "Filter debug is only available for local connectors.",
+    "filter_debug.not_available": "Filter debug is only available when at least one registered Fail2ban server is enabled.",
     "filter_debug.local_missing": "The local Fail2ban filter directory was not found on this host.",
     "email.ban.title": "Security alert: Fail2Ban blocked a new IP-address",
     "email.ban.intro": "Fail2Ban-UI detected a bad request or repeated authentication failures and automatically blocked the source-IP. Review the metadata and log excerpts below.",
