--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -19,6 +19,8 @@
   "dashboard.loading_summary": "Cargando resumen…",
   "dashboard.no_enabled_servers_title": "Sin conectores activos",
   "dashboard.no_enabled_servers_body": "Activa el conector local o registra un servidor Fail2ban remoto para ver datos en vivo.",
+  "dashboard.jail_local_warning_title": "El jail.local en este servidor no está gestionado por Fail2ban-UI",
+  "dashboard.jail_local_warning_body": "El archivo /etc/fail2ban/jail.local en el servidor seleccionado existe pero no está gestionado por Fail2ban-UI. Falta la acción de callback (ui-custom-action), lo que significa que los eventos de ban/unban no se registrarán y no se enviarán alertas por correo electrónico. Para solucionarlo, mueva cada sección jail de jail.local a su propio archivo en /etc/fail2ban/jail.d/ (use jailname.conf para mantener una configuración por defecto o jailname.local para anular un .conf existente). Luego elimine jail.local para que Fail2ban-UI pueda crear su propia versión gestionada (pulse una vez en la página de configuración para escribir el archivo). Asegúrese de que Fail2ban-UI tenga permisos de escritura en /etc/fail2ban/ -> consulte la documentación.",
   "dashboard.errors.summary_failed": "No se pudo cargar el resumen desde el servidor.",
   "dashboard.cards.active_jails": "Jails activos",
   "dashboard.cards.total_banned": "IPs bloqueadas totales",
@@ -336,6 +338,7 @@
   "servers.actions.test": "Probar conexión",
   "servers.actions.test_success": "Conexión exitosa",
   "servers.actions.test_failure": "Conexión fallida",
+  "servers.jail_local_warning": "Advertencia: jail.local no está gestionado por Fail2ban-UI. Mueva cada jail a su propio archivo en jail.d/ y elimine jail.local para que Fail2ban-UI pueda recrearlo (pulse una vez en la página de configuración para escribir el archivo). Consulte la documentación para permisos.",
   "servers.actions.restart": "Reiniciar Fail2ban",
   "servers.actions.reload": "Recargar Fail2ban",
   "servers.actions.reload_tooltip": "Para los conectores locales, solo es posible recargar la configuración a través de la conexión socket. El contenedor no puede reiniciar el servicio Fail2ban usando systemctl. Para realizar un reinicio completo, ejecute 'systemctl restart fail2ban' directamente en el sistema host.",
@@ -344,7 +347,7 @@
   "servers.form.select_key": "Seleccionar clave privada",
   "servers.form.select_key_placeholder": "Entrada manual",
   "servers.form.no_keys": "No se encontraron claves SSH; introduzca la ruta manualmente",
-    "filter_debug.not_available": "La depuración de filtros solo está disponible para conectores locales.",
+    "filter_debug.not_available": "La depuración de filtros solo está disponible cuando al menos un servidor Fail2ban registrado está activado.",
     "filter_debug.local_missing": "No se encontró el directorio de filtros local de Fail2ban en este host.",
     "email.ban.title": "Alerta de seguridad: Fail2Ban bloqueó una nueva dirección IP",
     "email.ban.intro": "Fail2Ban-UI detectó una solicitud incorrecta o fallos de autenticación repetidos y bloqueó automáticamente la IP de origen. Revise los metadatos y extractos de registro a continuación.",
