--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -19,6 +19,8 @@
   "dashboard.loading_summary": "Chargement du résumé…",
   "dashboard.no_enabled_servers_title": "Aucun connecteur actif",
   "dashboard.no_enabled_servers_body": "Activez le connecteur local ou enregistrez un serveur Fail2ban distant pour voir les données en direct.",
+  "dashboard.jail_local_warning_title": "Le jail.local sur ce serveur n'est pas géré par Fail2ban-UI",
+  "dashboard.jail_local_warning_body": "Le fichier /etc/fail2ban/jail.local sur le serveur sélectionné existe mais n'est pas géré par Fail2ban-UI. L'action de rappel (ui-custom-action) est manquante, ce qui signifie que les événements ban/unban ne seront pas enregistrés et aucune alerte e-mail ne sera envoyée. Pour corriger cela, déplacez chaque section jail de jail.local dans son propre fichier sous /etc/fail2ban/jail.d/ (utilisez jailname.conf pour garder une configuration par défaut ou jailname.local pour remplacer un .conf existant). Supprimez ensuite jail.local pour que Fail2ban-UI puisse créer sa propre version gérée (cliquez une fois sur la page de configuration pour écrire le fichier). Assurez-vous que Fail2ban-UI dispose des droits d'écriture sur /etc/fail2ban/ -> consultez la documentation.",
   "dashboard.errors.summary_failed": "Impossible de charger le résumé depuis le serveur.",
   "dashboard.cards.active_jails": "Jails actifs",
   "dashboard.cards.total_banned": "Total d'IPs bloquées",
@@ -336,6 +338,7 @@
   "servers.actions.test": "Tester la connexion",
   "servers.actions.test_success": "Connexion réussie",
   "servers.actions.test_failure": "Échec de la connexion",
+  "servers.jail_local_warning": "Attention : jail.local n'est pas géré par Fail2ban-UI. Déplacez chaque jail dans son propre fichier sous jail.d/ et supprimez jail.local pour que Fail2ban-UI puisse le recréer (cliquez une fois sur la page de configuration pour écrire le fichier). Consultez la documentation pour les permissions.",
   "servers.actions.restart": "Redémarrer Fail2ban",
   "servers.actions.reload": "Recharger Fail2ban",
   "servers.actions.reload_tooltip": "Pour les connecteurs locaux, seul un rechargement de la configuration est possible via la connexion socket. Le conteneur ne peut pas redémarrer le service Fail2ban en utilisant systemctl. Pour effectuer un redémarrage complet, exécutez 'systemctl restart fail2ban' directement sur le système hôte.",
@@ -344,7 +347,7 @@
   "servers.form.select_key": "Sélectionner la clé privée",
   "servers.form.select_key_placeholder": "Saisie manuelle",
   "servers.form.no_keys": "Aucune clé SSH trouvée ; saisissez le chemin manuellement",
-    "filter_debug.not_available": "Le débogage des filtres n'est disponible que pour les connecteurs locaux.",
+    "filter_debug.not_available": "Le débogage des filtres n'est disponible que lorsqu'au moins un serveur Fail2ban enregistré est activé.",
     "filter_debug.local_missing": "Le répertoire de filtres Fail2ban local est introuvable sur cet hôte.",
     "email.ban.title": "Alerte de sécurité : Fail2Ban a bloqué une nouvelle adresse IP",
     "email.ban.intro": "Fail2Ban-UI a détecté une requête suspecte ou des échecs d'authentification répétés et a automatiquement bloqué l'IP source. Consultez les métadonnées et extraits de journaux ci-dessous.",
