--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -19,6 +19,8 @@
   "dashboard.loading_summary": "Caricamento del riepilogo…",
   "dashboard.no_enabled_servers_title": "Nessun connettore attivo",
   "dashboard.no_enabled_servers_body": "Abilita il connettore locale o registra un server Fail2ban remoto per visualizzare dati in tempo reale.",
+  "dashboard.jail_local_warning_title": "Il jail.local sul server selezionato non è gestito da Fail2ban-UI",
+  "dashboard.jail_local_warning_body": "Il file /etc/fail2ban/jail.local sul server selezionato esiste ma non è gestito da Fail2ban-UI. L'azione di callback (ui-custom-action) è assente, il che significa che gli eventi ban/unban non verranno registrati e non verranno inviate notifiche e-mail. Per risolvere, sposta ogni sezione jail da jail.local in un file proprio sotto /etc/fail2ban/jail.d/ (usa jailname.conf per mantenere una configurazione predefinita o jailname.local per sovrascrivere un .conf esistente). Poi elimina jail.local in modo che Fail2ban-UI possa creare la propria versione gestita (salva una volta la pagina delle impostazioni per scrivere il file). Assicurati che Fail2ban-UI abbia i permessi di scrittura su /etc/fail2ban/ -> consulta la documentazione.",
   "dashboard.errors.summary_failed": "Impossibile caricare il riepilogo dal server.",
   "dashboard.cards.active_jails": "Jail attivi",
   "dashboard.cards.total_banned": "IP bloccate totali",
@@ -336,6 +338,7 @@
   "servers.actions.test": "Verifica connessione",
   "servers.actions.test_success": "Connessione riuscita",
   "servers.actions.test_failure": "Connessione fallita",
+  "servers.jail_local_warning": "Attenzione: jail.local non è gestito da Fail2ban-UI. Sposta ogni jail in un file proprio sotto jail.d/ ed elimina jail.local in modo che Fail2ban-UI possa ricrearlo (salva una volta la pagina delle impostazioni per scrivere il file). Consulta la documentazione per i permessi.",
   "servers.actions.restart": "Riavvia Fail2ban",
   "servers.actions.reload": "Ricarica Fail2ban",
   "servers.actions.reload_tooltip": "Per i connettori locali, è possibile solo un ricaricamento della configurazione tramite la connessione socket. Il contenitore non può riavviare il servizio Fail2ban utilizzando systemctl. Per eseguire un riavvio completo, eseguire 'systemctl restart fail2ban' direttamente sul sistema host.",
@@ -344,7 +347,7 @@
   "servers.form.select_key": "Seleziona chiave privata",
   "servers.form.select_key_placeholder": "Inserimento manuale",
   "servers.form.no_keys": "Nessuna chiave SSH trovata; inserire il percorso manualmente",
-    "filter_debug.not_available": "Il debug dei filtri è disponibile solo per i connettori locali.",
+    "filter_debug.not_available": "Il debug dei filtri è disponibile solo quando almeno un server Fail2ban registrato è attivato.",
     "filter_debug.local_missing": "La directory dei filtri Fail2ban locale non è stata trovata su questo host.",
     "email.ban.title": "Allerta di sicurezza: Fail2Ban ha bloccato un nuovo indirizzo IP",
     "email.ban.intro": "Fail2Ban-UI ha rilevato una richiesta sospetta o ripetuti fallimenti di autenticazione e ha automaticamente bloccato l'IP sorgente. Rivedere i metadati e gli estratti di log di seguito.",
