Update Language files and reformat that all thave the same indentation

--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -77,31 +77,31 @@
   "logs.table.count": "Nombre",
   "logs.table.jail": "Jail",
   "logs.table.ip": "IP",
-    "logs.table.time": "Heure",
-    "logs.table.country": "Pays",
-    "logs.table.actions": "Actions",
-    "logs.actions.whois": "Whois",
-    "logs.actions.logs": "Journaux",
-    "logs.search.label": "Rechercher des événements",
-    "logs.search.placeholder": "Rechercher IP, jail ou serveur",
-    "logs.search.country_label": "Pays",
-    "logs.search.country_all": "Tous les pays",
-    "logs.search.country_unknown": "Inconnu",
-    "logs.badge.recurring": "Récurrent",
-    "logs.modal.whois_title": "Informations Whois",
-    "logs.modal.logs_title": "Journaux",
-    "logs.modal.jail": "Jail",
-    "logs.modal.insights_title": "Aperçu des blocages",
-    "logs.modal.insights_description": "Répartition par pays et IP récurrentes.",
-    "logs.modal.insights_countries": "Blocages par pays",
-    "logs.modal.insights_countries_empty": "Aucun blocage enregistré pour cette période.",
+  "logs.table.time": "Heure",
+  "logs.table.country": "Pays",
+  "logs.table.actions": "Actions",
+  "logs.actions.whois": "Whois",
+  "logs.actions.logs": "Journaux",
+  "logs.search.label": "Rechercher des événements",
+  "logs.search.placeholder": "Rechercher IP, jail ou serveur",
+  "logs.search.country_label": "Pays",
+  "logs.search.country_all": "Tous les pays",
+  "logs.search.country_unknown": "Inconnu",
+  "logs.badge.recurring": "Récurrent",
+  "logs.modal.whois_title": "Informations Whois",
+  "logs.modal.logs_title": "Journaux",
+  "logs.modal.jail": "Jail",
+  "logs.modal.insights_title": "Aperçu des blocages",
+  "logs.modal.insights_description": "Répartition par pays et IP récurrentes.",
+  "logs.modal.insights_countries": "Blocages par pays",
+  "logs.modal.insights_countries_empty": "Aucun blocage enregistré pour cette période.",
   "logs.modal.insights_countries_hint": "Principales origines pour la période sélectionnée.",
   "logs.modal.insights_recurring_hint": "Adresses IP déclenchant Fail2ban à répétition.",
   "logs.modal.total_overall_note": "Blocages enregistrés depuis l'origine",
   "logs.modal.total_today_note": "Dernières 24 heures",
   "logs.modal.total_week_note": "Activité hebdomadaire",
-    "logs.modal.insights_recurring": "IPs récurrentes",
-    "logs.modal.insights_recurring_empty": "Aucune IP récurrente détectée.",
+  "logs.modal.insights_recurring": "IPs récurrentes",
+  "logs.modal.insights_recurring_empty": "Aucune IP récurrente détectée.",
   "filter_debug.title": "Débogage des filtres",
   "filter_debug.select_filter": "Sélectionnez un filtre",
   "filter_debug.filter_content": "Contenu du filtre",
@@ -131,6 +131,8 @@
   "settings.callback_url": "URL de rappel Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
   "settings.callback_url_hint": "Cette URL est utilisée par toutes les instances Fail2Ban pour envoyer les alertes de bannissement à Fail2Ban UI. Pour les déploiements locaux, utilisez le même port que Fail2Ban UI (p. ex. http://127.0.0.1:8080). Pour les configurations de reverse proxy, utilisez votre point de terminaison chiffré TLS (p. ex. https://fail2ban.example.com).",
+  "settings.callback_url_env_set": "L'URL de callback est définie via la variable d'environnement CALLBACK_URL :",
+  "settings.callback_url_env_hint": "Pour modifier l'URL de callback via l'interface Web, supprimez la variable d'environnement CALLBACK_URL et redémarrez le conteneur.",
   "settings.callback_secret": "Secret d'URL de Callback Fail2ban",
   "settings.callback_secret_placeholder": "Secret de 42 caractères généré automatiquement",
   "settings.callback_secret.description": "Ce secret est généré automatiquement et utilisé pour authentifier les demandes de notification de bannissement. Il est inclus dans la configuration d'action de fail2ban.",
@@ -347,28 +349,28 @@
   "servers.form.select_key": "Sélectionner la clé privée",
   "servers.form.select_key_placeholder": "Saisie manuelle",
   "servers.form.no_keys": "Aucune clé SSH trouvée ; saisissez le chemin manuellement",
-    "filter_debug.not_available": "Le débogage des filtres n'est disponible que lorsqu'au moins un serveur Fail2ban enregistré est activé.",
-    "filter_debug.local_missing": "Le répertoire de filtres Fail2ban local est introuvable sur cet hôte.",
-    "email.ban.title": "Alerte de sécurité : Fail2Ban a bloqué une nouvelle adresse IP",
-    "email.ban.intro": "Fail2Ban-UI a détecté une requête suspecte ou des échecs d'authentification répétés et a automatiquement bloqué l'IP source. Consultez les métadonnées et extraits de journaux ci-dessous.",
-    "email.ban.subject.banned": "Bloqué",
-    "email.ban.subject.from": "depuis",
-    "email.ban.details.banned_ip": "IP bloquée",
-    "email.ban.details.jail": "Jail",
-    "email.ban.details.hostname": "Nom d'hôte",
-    "email.ban.details.failed_attempts": "Tentatives échouées",
-    "email.ban.details.country": "Pays",
-    "email.ban.details.timestamp": "Horodatage",
-    "email.ban.whois_title": "Empreinte WHOIS",
-    "email.ban.logs_title": "Extraits de journaux pertinents",
-    "email.test.title": "Test de livraison d'email",
-    "email.test.intro": "Ce message confirme que votre configuration SMTP fonctionne correctement et peut livrer des emails formatés en HTML.",
-    "email.test.subject": "Email de test de Fail2Ban UI",
-    "email.test.details.recipient": "Destinataire",
-    "email.test.details.smtp_host": "Hôte SMTP",
-    "email.test.details.triggered_at": "Déclenché à",
-    "email.test.whois_no_data": "Aucune recherche WHOIS n'est exécutée pour les emails de test.",
-    "email.test.sample_logs": "2025-01-01T12:00:00Z Entrée de journal d'exemple de Fail2ban-UI.",
+  "filter_debug.not_available": "Le débogage des filtres n'est disponible que lorsqu'au moins un serveur Fail2ban enregistré est activé.",
+  "filter_debug.local_missing": "Le répertoire de filtres Fail2ban local est introuvable sur cet hôte.",
+  "email.ban.title": "Alerte de sécurité : Fail2Ban a bloqué une nouvelle adresse IP",
+  "email.ban.intro": "Fail2Ban-UI a détecté une requête suspecte ou des échecs d'authentification répétés et a automatiquement bloqué l'IP source. Consultez les métadonnées et extraits de journaux ci-dessous.",
+  "email.ban.subject.banned": "Bloqué",
+  "email.ban.subject.from": "depuis",
+  "email.ban.details.banned_ip": "IP bloquée",
+  "email.ban.details.jail": "Jail",
+  "email.ban.details.hostname": "Nom d'hôte",
+  "email.ban.details.failed_attempts": "Tentatives échouées",
+  "email.ban.details.country": "Pays",
+  "email.ban.details.timestamp": "Horodatage",
+  "email.ban.whois_title": "Empreinte WHOIS",
+  "email.ban.logs_title": "Extraits de journaux pertinents",
+  "email.test.title": "Test de livraison d'email",
+  "email.test.intro": "Ce message confirme que votre configuration SMTP fonctionne correctement et peut livrer des emails formatés en HTML.",
+  "email.test.subject": "Email de test de Fail2Ban UI",
+  "email.test.details.recipient": "Destinataire",
+  "email.test.details.smtp_host": "Hôte SMTP",
+  "email.test.details.triggered_at": "Déclenché à",
+  "email.test.whois_no_data": "Aucune recherche WHOIS n'est exécutée pour les emails de test.",
+  "email.test.sample_logs": "2025-01-01T12:00:00Z Entrée de journal d'exemple de Fail2ban-UI.",
   "email.whois.no_data": "Les données WHOIS n'ont pas été capturées pour cet événement.",
   "email.logs.no_data": "Aucune entrée de journal n'a été capturée pour ce blocage.",
   "email.footer.text": "Ce message a été généré automatiquement par Fail2Ban-UI",
