--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -77,31 +77,31 @@
   "logs.table.count": "Conteggio",
   "logs.table.jail": "Jail",
   "logs.table.ip": "IP",
-    "logs.table.time": "Ora",
-    "logs.table.country": "Paese",
-    "logs.table.actions": "Azioni",
-    "logs.actions.whois": "Whois",
-    "logs.actions.logs": "Log",
-    "logs.search.label": "Cerca eventi",
-    "logs.search.placeholder": "Cerca IP, jail o server",
-    "logs.search.country_label": "Paese",
-    "logs.search.country_all": "Tutti i paesi",
-    "logs.search.country_unknown": "Sconosciuto",
-    "logs.badge.recurring": "Ricorrente",
-    "logs.modal.whois_title": "Informazioni Whois",
-    "logs.modal.logs_title": "Log",
-    "logs.modal.jail": "Jail",
-    "logs.modal.insights_title": "Statistiche blocchi",
-    "logs.modal.insights_description": "Distribuzione per paese e IP ricorrenti.",
-    "logs.modal.insights_countries": "Blocchi per paese",
-    "logs.modal.insights_countries_empty": "Nessun blocco registrato per questo periodo.",
+  "logs.table.time": "Ora",
+  "logs.table.country": "Paese",
+  "logs.table.actions": "Azioni",
+  "logs.actions.whois": "Whois",
+  "logs.actions.logs": "Log",
+  "logs.search.label": "Cerca eventi",
+  "logs.search.placeholder": "Cerca IP, jail o server",
+  "logs.search.country_label": "Paese",
+  "logs.search.country_all": "Tutti i paesi",
+  "logs.search.country_unknown": "Sconosciuto",
+  "logs.badge.recurring": "Ricorrente",
+  "logs.modal.whois_title": "Informazioni Whois",
+  "logs.modal.logs_title": "Log",
+  "logs.modal.jail": "Jail",
+  "logs.modal.insights_title": "Statistiche blocchi",
+  "logs.modal.insights_description": "Distribuzione per paese e IP ricorrenti.",
+  "logs.modal.insights_countries": "Blocchi per paese",
+  "logs.modal.insights_countries_empty": "Nessun blocco registrato per questo periodo.",
   "logs.modal.insights_countries_hint": "Origini principali per l'intervallo selezionato.",
   "logs.modal.insights_recurring_hint": "IP che attivano ripetutamente Fail2ban.",
   "logs.modal.total_overall_note": "Blocchi totali registrati",
   "logs.modal.total_today_note": "Ultime 24 ore",
   "logs.modal.total_week_note": "Attività settimanale",
-    "logs.modal.insights_recurring": "IP ricorrenti",
-    "logs.modal.insights_recurring_empty": "Nessun IP ricorrente rilevato.",
+  "logs.modal.insights_recurring": "IP ricorrenti",
+  "logs.modal.insights_recurring_empty": "Nessun IP ricorrente rilevato.",
   "filter_debug.title": "Debug Filtro",
   "filter_debug.select_filter": "Seleziona un filtro",
   "filter_debug.filter_content": "Contenuto del filtro",
@@ -131,6 +131,8 @@
   "settings.callback_url": "URL di callback Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
   "settings.callback_url_hint": "Questo URL viene utilizzato da tutte le istanze Fail2Ban per inviare gli avvisi di ban a Fail2Ban UI. Per le distribuzioni locali, utilizzare la stessa porta di Fail2Ban UI (es. http://127.0.0.1:8080). Per le configurazioni di reverse proxy, utilizzare il proprio endpoint crittografato TLS (es. https://fail2ban.example.com).",
+  "settings.callback_url_env_set": "L'URL di callback è impostato tramite la variabile d'ambiente CALLBACK_URL:",
+  "settings.callback_url_env_hint": "Per modificare l'URL di callback tramite l'interfaccia Web, rimuovere la variabile d'ambiente CALLBACK_URL e riavviare il contenitore.",
   "settings.callback_secret": "Secret URL di Callback Fail2ban",
   "settings.callback_secret_placeholder": "Secret di 42 caratteri generato automaticamente",
   "settings.callback_secret.description": "Questo secret viene generato automaticamente e utilizzato per autenticare le richieste di notifica di ban. È incluso nella configurazione dell'azione di fail2ban.",
@@ -347,28 +349,28 @@
   "servers.form.select_key": "Seleziona chiave privata",
   "servers.form.select_key_placeholder": "Inserimento manuale",
   "servers.form.no_keys": "Nessuna chiave SSH trovata; inserire il percorso manualmente",
-    "filter_debug.not_available": "Il debug dei filtri è disponibile solo quando almeno un server Fail2ban registrato è attivato.",
-    "filter_debug.local_missing": "La directory dei filtri Fail2ban locale non è stata trovata su questo host.",
-    "email.ban.title": "Allerta di sicurezza: Fail2Ban ha bloccato un nuovo indirizzo IP",
-    "email.ban.intro": "Fail2Ban-UI ha rilevato una richiesta sospetta o ripetuti fallimenti di autenticazione e ha automaticamente bloccato l'IP sorgente. Rivedere i metadati e gli estratti di log di seguito.",
-    "email.ban.subject.banned": "Bloccato",
-    "email.ban.subject.from": "da",
-    "email.ban.details.banned_ip": "IP bloccato",
-    "email.ban.details.jail": "Jail",
-    "email.ban.details.hostname": "Nome host",
-    "email.ban.details.failed_attempts": "Tentativi falliti",
-    "email.ban.details.country": "Paese",
-    "email.ban.details.timestamp": "Timestamp",
-    "email.ban.whois_title": "Impronta WHOIS",
-    "email.ban.logs_title": "Estratti di log rilevanti",
-    "email.test.title": "Test di consegna email",
-    "email.test.intro": "Questo messaggio conferma che la configurazione SMTP funziona correttamente e può consegnare email formattate in HTML.",
-    "email.test.subject": "Email di test da Fail2Ban UI",
-    "email.test.details.recipient": "Destinatario",
-    "email.test.details.smtp_host": "Host SMTP",
-    "email.test.details.triggered_at": "Attivato alle",
-    "email.test.whois_no_data": "Nessuna ricerca WHOIS viene eseguita per le email di test.",
-    "email.test.sample_logs": "2025-01-01T12:00:00Z Voce di log di esempio di Fail2ban-UI.",
+  "filter_debug.not_available": "Il debug dei filtri è disponibile solo quando almeno un server Fail2ban registrato è attivato.",
+  "filter_debug.local_missing": "La directory dei filtri Fail2ban locale non è stata trovata su questo host.",
+  "email.ban.title": "Allerta di sicurezza: Fail2Ban ha bloccato un nuovo indirizzo IP",
+  "email.ban.intro": "Fail2Ban-UI ha rilevato una richiesta sospetta o ripetuti fallimenti di autenticazione e ha automaticamente bloccato l'IP sorgente. Rivedere i metadati e gli estratti di log di seguito.",
+  "email.ban.subject.banned": "Bloccato",
+  "email.ban.subject.from": "da",
+  "email.ban.details.banned_ip": "IP bloccato",
+  "email.ban.details.jail": "Jail",
+  "email.ban.details.hostname": "Nome host",
+  "email.ban.details.failed_attempts": "Tentativi falliti",
+  "email.ban.details.country": "Paese",
+  "email.ban.details.timestamp": "Timestamp",
+  "email.ban.whois_title": "Impronta WHOIS",
+  "email.ban.logs_title": "Estratti di log rilevanti",
+  "email.test.title": "Test di consegna email",
+  "email.test.intro": "Questo messaggio conferma che la configurazione SMTP funziona correttamente e può consegnare email formattate in HTML.",
+  "email.test.subject": "Email di test da Fail2Ban UI",
+  "email.test.details.recipient": "Destinatario",
+  "email.test.details.smtp_host": "Host SMTP",
+  "email.test.details.triggered_at": "Attivato alle",
+  "email.test.whois_no_data": "Nessuna ricerca WHOIS viene eseguita per le email di test.",
+  "email.test.sample_logs": "2025-01-01T12:00:00Z Voce di log di esempio di Fail2ban-UI.",
   "email.whois.no_data": "I dati WHOIS non sono stati acquisiti per questo evento.",
   "email.logs.no_data": "Nessuna voce di log è stata acquisita per questo blocco.",
   "email.footer.text": "Questo messaggio è stato generato automaticamente da Fail2Ban-UI",
