--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -353,6 +353,7 @@
   "filter_debug.local_missing": "S lokale Fail2ban-Filterverzeichnis isch uf däm Host nid gfunde worde.",
   "filter_debug.save_success": "Filter- und Jail-Konfiguration gspicheret und Fail2ban neu glade",
   "filter_debug.save_reload_warning": "Konfiguration gspicheret, aber z'Reload isch fähugschlage",
+  "filter_debug.jail_auto_disabled": "Jail '%s' isch automatisch deaktiviert worde.",
   "email.ban.title": "Achtung: Fail2Ban het e nöi IP-Adrässe blockiert",
   "email.ban.intro": "Fail2Ban-UI het e fehlerhafti Aafrag oder widerholti Authentifizierigsfähler erkennt und d Quell-IP automatisch blockiert. Überprüef d Metadate und Log-Uuszüg unge.",
   "email.ban.subject.banned": "G'sperrt",
