--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -353,6 +353,7 @@
   "filter_debug.local_missing": "No se encontró el directorio de filtros local de Fail2ban en este host.",
   "filter_debug.save_success": "Configuración de filtro y jail guardada y Fail2ban recargado",
   "filter_debug.save_reload_warning": "Configuración guardada, pero la recarga de Fail2ban falló",
+  "filter_debug.jail_auto_disabled": "El jail '%s' se desactivó automáticamente.",
   "email.ban.title": "Alerta de seguridad: Fail2Ban bloqueó una nueva dirección IP",
   "email.ban.intro": "Fail2Ban-UI detectó una solicitud incorrecta o fallos de autenticación repetidos y bloqueó automáticamente la IP de origen. Revise los metadatos y extractos de registro a continuación.",
   "email.ban.subject.banned": "Bloqueado",
