--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -353,6 +353,7 @@
   "filter_debug.local_missing": "La directory dei filtri Fail2ban locale non è stata trovata su questo host.",
   "filter_debug.save_success": "Configurazione di filtro e jail salvata e Fail2ban ricaricato",
   "filter_debug.save_reload_warning": "Configurazione salvata, ma il ricaricamento di Fail2ban non è riuscito",
+  "filter_debug.jail_auto_disabled": "Il jail '%s' è stato disattivato automaticamente.",
   "email.ban.title": "Allerta di sicurezza: Fail2Ban ha bloccato un nuovo indirizzo IP",
   "email.ban.intro": "Fail2Ban-UI ha rilevato una richiesta sospetta o ripetuti fallimenti di autenticazione e ha automaticamente bloccato l'IP sorgente. Rivedere i metadati e gli estratti di log di seguito.",
   "email.ban.subject.banned": "Bloccato",
