Add global threat map to the ban insights modal for better overview from where the most bans are (red pier)

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Aktivität der letzten Woche",
   "logs.modal.insights_recurring": "Wiederkehrende IPs",
   "logs.modal.insights_recurring_empty": "Keine wiederkehrenden IPs erkannt.",
+  "logs.modal.threat_map_title": "Globale Bedrohungskarte",
+  "logs.modal.threat_map_hint": "Ziehen zum Drehen, Scrollen zum Zoomen.",
+  "logs.modal.threat_map_empty": "Keine Geodaten verfügbar.",
   "filter_debug.title": "Filter-Debug",
   "filter_debug.select_filter": "Wählen Sie einen Filter",
   "filter_debug.filter_content": "Filter-Inhalt",
