--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Aktivität vor letschte Wuche",
   "logs.modal.insights_recurring": "Wiederkehrendi IPs",
   "logs.modal.insights_recurring_empty": "Ke wiederkehrendi IPs erkannt.",
+  "logs.modal.threat_map_title": "Globali Bedrohigscharte",
+  "logs.modal.threat_map_hint": "Zieh zum Dräie, Scroll zum Zoomä.",
+  "logs.modal.threat_map_empty": "Ke Geodate verfüegbar.",
   "filter_debug.title": "Filter Debug",
   "filter_debug.select_filter": "Wähl ä Filter us",
   "filter_debug.filter_content": "Filter-Inhalt",
