--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Weekly activity",
   "logs.modal.insights_recurring": "Recurring IPs",
   "logs.modal.insights_recurring_empty": "No recurring IPs detected.",
+  "logs.modal.threat_map_title": "Global Threat Map",
+  "logs.modal.threat_map_hint": "Drag to rotate, scroll to zoom.",
+  "logs.modal.threat_map_empty": "No geo data available.",
   "filter_debug.title": "Filter Debug",
   "filter_debug.select_filter": "Select a Filter",
   "filter_debug.filter_content": "Filter Content",
