--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Actividad semanal",
   "logs.modal.insights_recurring": "IPs recurrentes",
   "logs.modal.insights_recurring_empty": "No se detectaron IPs recurrentes.",
+  "logs.modal.threat_map_title": "Mapa global de amenazas",
+  "logs.modal.threat_map_hint": "Arrastrar para girar, desplazar para hacer zoom.",
+  "logs.modal.threat_map_empty": "No hay datos geográficos disponibles.",
   "filter_debug.title": "Depuración de filtros",
   "filter_debug.select_filter": "Selecciona un filtro",
   "filter_debug.filter_content": "Contenido del filtro",
