--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Activité hebdomadaire",
   "logs.modal.insights_recurring": "IPs récurrentes",
   "logs.modal.insights_recurring_empty": "Aucune IP récurrente détectée.",
+  "logs.modal.threat_map_title": "Carte mondiale des menaces",
+  "logs.modal.threat_map_hint": "Glisser pour tourner, défiler pour zoomer.",
+  "logs.modal.threat_map_empty": "Aucune donnée géographique disponible.",
   "filter_debug.title": "Débogage des filtres",
   "filter_debug.select_filter": "Sélectionnez un filtre",
   "filter_debug.filter_content": "Contenu du filtre",
