--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -102,6 +102,9 @@
   "logs.modal.total_week_note": "Attività settimanale",
   "logs.modal.insights_recurring": "IP ricorrenti",
   "logs.modal.insights_recurring_empty": "Nessun IP ricorrente rilevato.",
+  "logs.modal.threat_map_title": "Mappa globale delle minacce",
+  "logs.modal.threat_map_hint": "Trascinare per ruotare, scorrere per zoomare.",
+  "logs.modal.threat_map_empty": "Nessun dato geografico disponibile.",
   "filter_debug.title": "Debug Filtro",
   "filter_debug.select_filter": "Seleziona un filtro",
   "filter_debug.filter_content": "Contenuto del filtro",
